2004-06-03	Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.h: use new DECL defines (reported by Michael Schloh
	  von Bennewitz <michael.schloh@cw.com>).

2003-12-17	albert chin <china@thewrittenword.com>

	* xalloca.h: tweak for aix.

2003-12-17	Alexander V. Lukyanov <lav@yars.free.net>

	* post-config.h: include xalloca.h early; include sys/socket.h
	  and define socklen_t if needed.

2003-12-16	albert chin <china@thewrittenword.com>

	* post-config.h: Don't assume C++ compiler defines __STDC__.